# rustshield-gateway

./: .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  h public evidence showcase"
configs/: lab-network-explicit.toml  sitl-gateway.toml
definicion/: arquitectura-arc42-mavlink-rust-shield-gateway.md  catalogo-comandos-mavlink-criticos.md  definition-of-done.md  documentacion-recomendada-arquitectura-producto.md  especificacion-arm-auto-001.md  especificacion-autenticacion-signing.md  especificacion-configuracion.md  especificacion-observabilidad.md  especificacion-politicas-seguridad.md  estrategia-gestion-claves.md  glosario-mavlink-seguridad.md  herramientas-implementacion-mvp-0.1.md  indice-documentacion-proyecto.md  matriz-compatibilidad-gcs-autopilotos.md  modelo-amenazas-mavlink-rust-shield-gateway.md  mvp-0.1-alcance-y-criterios.md  plan-benchmark-latencia.md  plan-fuzzing-mavlink.md  plan-validacion-sitl.md  prd-mavlink-rust-shield-gateway.md  recomendacion-autenticacion-signing-post-mvp.md  registro-riesgos.md  requerimiento-tecnico-mavlink-rust-shield-gateway.md  trazabilidad-mvp-0.1.md  validacion-modo-ardupilot-sitl.md  verificacion-entorno-pruebas-mvp-0.1.md
docs/: architecture-summary.md  assessment-offer.md  claims.md  commercial-pilot-package.md  demo.md  evidence-ladder.md  evidence-summary.md  fixtures-summary.md  github-visibility-checklist.md  limitations.md  market-positioning.md  observability-summary.md  (+12 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_mavlink_frame.rs
(+38 files in other folders)
