[package]
name = "mavlink-rust-shield-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "Security-sensitive MAVLink 2 gateway MVP for SITL validation"

[[bin]]
name = "mavlink-shield-gateway"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
mavlink = { version = "0.17.1", default-features = false, features = ["common", "signing", "std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
